kubeConf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devosc-blog-service
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: devosc-blog
  ports:
    - port: 8080
      protocol: TCP
