kubeConf/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devosc-blog-network-policy
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: devosc-blog
  policyTypes:
  - Egress
  - Ingress
  ingress:
    - ports:
        - port: 8080
          protocol: TCP
